# tmplORM

./: .clang-tidy  .gitignore  .gitmodules  .lgtm.yml  .travis.yml  LICENSE  Makefile  Makefile.inc  README.md  appveyor.yml  build32.sh  build64.sh  buildCheck.cxx  conversions.hxx  dateTime.hxx  fd.hxx  fixedVector.hxx  managedPtr.hxx  meson.build  meson_options.txt  mssql.cxx  mssql.hxx  mysql.cxx  mysql.hxx  pgsql.cxx  pgsql.hxx  runClangTidy.py  string.cxx  string.hxx  tmplORM.common.hxx  tmplORM.extern.hxx  tmplORM.hxx  tmplORM.mssql.hxx  tmplORM.mysql.hxx  tmplORM.pc.in  tmplORM.pgsql.hxx  tmplORM.rSON.hxx  tmplORM.types.cxx  tmplORM.types.hxx  typestring  (+1 more)
.github/workflows/: build-linux.yml
.travis-ci/: docker.sh  install.sh  installCoverity.sh  makePassword.py  msodbcsql17.sh
docs/: tmplORM.conf
serializer/: fromJSON.cxx  fromJSON.hxx  helpers.hxx  json.cxx  json.hxx  toJSON.hxx
test/: Makefile  constString.hxx  conversions.cxx  fixedVector.cxx  meson.build  models.hxx  test.ini  testConversions.cxx  testConversions.hxx  testDateTime.cxx  testFixedVector.cxx  testFixedVector.hxx  testMSSQL.cxx  testMSSQLMapper.cxx  testMySQL.cxx  testMySQLMapper.cxx  testPgSQL.cxx  testString.cxx  testTypes.cxx  testTypes.hxx  tmplORM.types.cxx
test/data/: meson.build
test/serializer/: meson.build  mssqlToJSON.cxx  mysqlToJSON.cxx  toJSON.hxx
typestring/: typestring.hh
